# AGM

./: Cargo.toml  GEMINI.md  README.md  agents.txt
agm/: Cargo.toml
agm-core/: Cargo.toml
agm-core/src/: async_runtime.rs  config.rs  install.rs  ipc.rs  lib.rs  mod_spec.rs  nexus.rs  preset.rs  profile.rs  symlink.rs
agm-url-handler/: Cargo.toml
agm-url-handler/src/: lib.rs  main.rs  register.rs
agm/src/: main.rs
agmcore/: Cargo.toml
agmcore/src/: config.rs  lib.rs  preset.rs  profile.rs  symlink.rs
cli/: Cargo.toml
cli/src/: lib.rs
gui/: Cargo.toml
gui/src/: lib.rs
src/: main.rs
tui/: Cargo.toml
tui/src/: lib.rs
