[package]
name = "agm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "agmcore",
  "cli",
  "tui",
  "gui",
]

[dependencies]
agmcore = { path = "./agmcore" }
cli     = { path = "./cli", optional = true }
tui     = { path = "./tui", optional = true }
gui     = { path = "./gui", optional = true }

[features]
default = ["cli"]
cli = ["dep:cli"]
tui = ["dep:tui", "cli"]
gui = ["dep:gui", "cli"]

