[package]
name = "agm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "agm-core",
  "cli",
  "tui",
  "gui",
  "agm-url-handler",
]

[dependencies]
agm_core = { path = "./agm-core" }
cli     = { path = "./cli", optional = true }
tui     = { path = "./tui", optional = true }
gui     = { path = "./gui", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["cli"]
cli = ["dep:cli"]
tui = ["dep:tui", "cli"]
gui = ["dep:gui", "cli"]

