[package]
name = "agm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
agm_url_handler = { path = "../agm-url-handler/" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
dirs-next = "2.0.0"
tokio = { version = "1.35", features = ["net", "sync"] }
