[package]
name = "agm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dirs-next = "2.0"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.1", features = ["full"] }
zip = "0.6.6"
walkdir = "2.5.0"
unrar = "0.5.5"
sevenz-rust = "*"
tar = "0.4.40"
thiserror = "2.0.18"
url = "2.5.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"



