[package]
name = "agm_url_handler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1.35", features = ["net", "macros", "rt-multi-thread", "io-util"] }
dirs-next = "2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
