[package]
name = "agm"
version = "0.1.0"
edition = "2024"

[dependencies]
agmcore = { path = "../agmcore" }
cli = { path = "../cli" }
clap = { version = "4.4.11", features = ["derive"] }

tui = { path = "../tui", optional = true }
gui = { path = "../gui", optional = true }

[features]
default = []
tui = ["dep:tui"]
gui = ["dep:gui"]
